package com.flaco.skateschool.enums;

public enum Role {
    STUDENT,
    TEACHER,
    ADMIN
}