package com.flaco.skateschool.enums;

public enum SkateStyle {
    BOWL,
    PARK,
    STREET
}