package com.flaco.skateschool.enums;

public enum SkillLevel {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED,
    PRO
}