@startuml

skinparam packageStyle rectangle

' ENUMS
enum Role {
             STUDENT,
             TEACHER,
             ADMIN
         }

enum BookingStatus {
                       PENDING,
                       CONFIRMED,
                       CANCELLED,
                       COMPLETED
                   }

enum SkillLevel {
                    BEGINNER,
                    INTERMEDIATE,
                    ADVANCED,
                    PRO
                }

enum SkateStyle {
                    BOWL,
                    PARK,
                    STREET
                }


abstract class User {
    +Long id
    +String username
    +String password
    +String email
    +Role role
    +LocalDateTime createdAt
    +LocalDateTime updatedAt
    +boolean active
}

class Student {
    +SkateStyle skateStyle
    +SkillLevel skillLevel
    +List<Booking> bookings
}

class Teacher {
    +String specialty
    +Integer yearsExperience
    +List<Lesson> lessons
}

class Lesson {
    +Long id
    +String title
    +String description
    +LocalDateTime startTime
    +LocalDateTime endTime
    +SkillLevel skillLevel
    +SkateStyle skateStyle
    +Integer maxStudents
    +LocalDateTime createdAt
    +LocalDateTime updatedAt
    +boolean isFull()
}

class Booking {
    +Long id
    +String notes
    +BookingStatus status
}

' Inheritance relations
User <|-- Student
User <|-- Teacher

' Class relations
Student "1" --> "0..*" Booking : effettua
Booking "1" --> "1" Lesson : prenota
Lesson "1" --> "0..*" Booking : contiene
Lesson "1" --> "1" Teacher : è tenuta da
Teacher "1" --> "0..*" Lesson : insegna

@enduml
